--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "youtube-render",
+  "name": "render-api",
   "version": "1.0.0",
-  "description": "Renderiza vídeo com miniatura e envia para YouTube",
+  "description": "API para receber vídeo do Google Drive, adicionar miniatura e enviar para YouTube",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
-    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^131.0.0",
-    "sharp": "^0.32.4",
-    "cors": "^2.8.5"
+    "sharp": "^0.32.4"
   }
 }
