--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "render-api",
+  "name": "youtube-render-api",
   "version": "1.0.0",
-  "description": "API para receber vídeo do Google Drive, adicionar miniatura e enviar para YouTube",
-  "main": "server.js",
+  "description": "API Node.js para processar vídeos do Google Drive e enviar para YouTube",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^131.0.0",
-    "sharp": "^0.32.4"
+    "sharp": "^0.32.5"
   }
 }
