--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^131.0.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
